Add weather blocks

--- a/page.html
+++ b/page.html
@@ -1,14 +1,376 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <title>Weather Website</title>
+    <link href="styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
     <header>
     </header>
 
     <main>
+        <div id="wtr-block-list">
+            <div class="wtr-block">
+                <div class="wtr-header">
+                    <h3 class="wtr-city-name">
+                        Moscow
+                    </h3>
+                    <span class="wtr-temp">
+                        5°C
+                    </span>
+                    <img class="wtr-icon">
+                    <button class="wtr-del-button"></button>
+                </div>
+
+                <ul class="wtr-val-list">
+                    <div class="wtr-val">
+                        <span class="wtr-val-name">
+                            Ветер
+                        </span>
+                        <span class="wtr-val-val">
+                            Moderate breeze, 6.0 m/s, North-northwest
+                        </span>
+                    </div>
+
+                    <div class="wtr-val">
+                        <span class="wtr-val-name">
+                            Ветер
+                        </span>
+                            <span class="wtr-val-val">
+                            Moderate breeze, 6.0 m/s, North-northwest
+                        </span>
+                    </div>
+
+                    <div class="wtr-val">
+                        <span class="wtr-val-name">
+                            Ветер
+                        </span>
+                            <span class="wtr-val-val">
+                            Moderate breeze, 6.0 m/s, North-northwest
+                        </span>
+                    </div>
+
+                    <div class="wtr-val">
+                        <span class="wtr-val-name">
+                            Ветер
+                        </span>
+                            <span class="wtr-val-val">
+                            Moderate breeze, 6.0 m/s, North-northwest
+                        </span>
+                    </div>
+
+                    <div class="wtr-val">
+                        <span class="wtr-val-name">
+                            Ветер
+                        </span>
+                            <span class="wtr-val-val">
+                            Moderate breeze, 6.0 m/s, North-northwest
+                        </span>
+                    </div>
+                </ul>
+            </div>
+
+            <div class="wtr-block">
+                <div class="wtr-header">
+                    <h3 class="wtr-city-name">
+                        Moscow
+                    </h3>
+                    <span class="wtr-temp">
+                        5°C
+                    </span>
+                    <img class="wtr-icon">
+                    <button class="wtr-del-button"></button>
+                </div>
+
+                <ul class="wtr-val-list">
+                    <div class="wtr-val">
+                        <span class="wtr-val-name">
+                            Ветер
+                        </span>
+                        <span class="wtr-val-val">
+                            Moderate breeze, 6.0 m/s, North-northwest
+                        </span>
+                    </div>
+
+                    <div class="wtr-val">
+                        <span class="wtr-val-name">
+                            Ветер
+                        </span>
+                        <span class="wtr-val-val">
+                            Moderate breeze, 6.0 m/s, North-northwest
+                        </span>
+                    </div>
+
+                    <div class="wtr-val">
+                        <span class="wtr-val-name">
+                            Ветер
+                        </span>
+                        <span class="wtr-val-val">
+                            Moderate breeze, 6.0 m/s, North-northwest
+                        </span>
+                    </div>
+
+                    <div class="wtr-val">
+                        <span class="wtr-val-name">
+                            Ветер
+                        </span>
+                        <span class="wtr-val-val">
+                            Moderate breeze, 6.0 m/s, North-northwest
+                        </span>
+                    </div>
+
+                    <div class="wtr-val">
+                        <span class="wtr-val-name">
+                            Ветер
+                        </span>
+                        <span class="wtr-val-val">
+                            Moderate breeze, 6.0 m/s, North-northwest
+                        </span>
+                    </div>
+                </ul>
+            </div>
+
+            <div class="wtr-block">
+                <div class="wtr-header">
+                    <h3 class="wtr-city-name">
+                        Moscow
+                    </h3>
+                    <span class="wtr-temp">
+                        5°C
+                    </span>
+                    <img class="wtr-icon">
+                    <button class="wtr-del-button"></button>
+                </div>
+
+                <ul class="wtr-val-list">
+                    <div class="wtr-val">
+                        <span class="wtr-val-name">
+                            Ветер
+                        </span>
+                        <span class="wtr-val-val">
+                            Moderate breeze, 6.0 m/s, North-northwest
+                        </span>
+                    </div>
+
+                    <div class="wtr-val">
+                        <span class="wtr-val-name">
+                            Ветер
+                        </span>
+                        <span class="wtr-val-val">
+                            Moderate breeze, 6.0 m/s, North-northwest
+                        </span>
+                    </div>
+
+                    <div class="wtr-val">
+                        <span class="wtr-val-name">
+                            Ветер
+                        </span>
+                        <span class="wtr-val-val">
+                            Moderate breeze, 6.0 m/s, North-northwest
+                        </span>
+                    </div>
+
+                    <div class="wtr-val">
+                        <span class="wtr-val-name">
+                            Ветер
+                        </span>
+                        <span class="wtr-val-val">
+                            Moderate breeze, 6.0 m/s, North-northwest
+                        </span>
+                    </div>
+
+                    <div class="wtr-val">
+                        <span class="wtr-val-name">
+                            Ветер
+                        </span>
+                        <span class="wtr-val-val">
+                            Moderate breeze, 6.0 m/s, North-northwest
+                        </span>
+                    </div>
+                </ul>
+            </div>
+
+            <div class="wtr-block">
+                <div class="wtr-header">
+                    <h3 class="wtr-city-name">
+                        Moscow
+                    </h3>
+                    <span class="wtr-temp">
+                        5°C
+                    </span>
+                    <img class="wtr-icon">
+                    <button class="wtr-del-button"></button>
+                </div>
+
+                <ul class="wtr-val-list">
+                    <div class="wtr-val">
+                        <span class="wtr-val-name">
+                            Ветер
+                        </span>
+                        <span class="wtr-val-val">
+                            Moderate breeze, 6.0 m/s, North-northwest
+                        </span>
+                    </div>
+
+                    <div class="wtr-val">
+                        <span class="wtr-val-name">
+                            Ветер
+                        </span>
+                        <span class="wtr-val-val">
+                            Moderate breeze, 6.0 m/s, North-northwest
+                        </span>
+                    </div>
+
+                    <div class="wtr-val">
+                        <span class="wtr-val-name">
+                            Ветер
+                        </span>
+                        <span class="wtr-val-val">
+                            Moderate breeze, 6.0 m/s, North-northwest
+                        </span>
+                    </div>
+
+                    <div class="wtr-val">
+                        <span class="wtr-val-name">
+                            Ветер
+                        </span>
+                        <span class="wtr-val-val">
+                            Moderate breeze, 6.0 m/s, North-northwest
+                        </span>
+                    </div>
+
+                    <div class="wtr-val">
+                        <span class="wtr-val-name">
+                            Ветер
+                        </span>
+                        <span class="wtr-val-val">
+                            Moderate breeze, 6.0 m/s, North-northwest
+                        </span>
+                    </div>
+                </ul>
+            </div>
+
+            <div class="wtr-block">
+                <div class="wtr-header">
+                    <h3 class="wtr-city-name">
+                        Moscow
+                    </h3>
+                    <span class="wtr-temp">
+                        5°C
+                    </span>
+                    <img class="wtr-icon">
+                    <button class="wtr-del-button"></button>
+                </div>
+
+                <ul class="wtr-val-list">
+                    <div class="wtr-val">
+                        <span class="wtr-val-name">
+                            Ветер
+                        </span>
+                        <span class="wtr-val-val">
+                            Moderate breeze, 6.0 m/s, North-northwest
+                        </span>
+                    </div>
+
+                    <div class="wtr-val">
+                        <span class="wtr-val-name">
+                            Ветер
+                        </span>
+                        <span class="wtr-val-val">
+                            Moderate breeze, 6.0 m/s, North-northwest
+                        </span>
+                    </div>
+
+                    <div class="wtr-val">
+                        <span class="wtr-val-name">
+                            Ветер
+                        </span>
+                        <span class="wtr-val-val">
+                            Moderate breeze, 6.0 m/s, North-northwest
+                        </span>
+                    </div>
+
+                    <div class="wtr-val">
+                        <span class="wtr-val-name">
+                            Ветер
+                        </span>
+                        <span class="wtr-val-val">
+                            Moderate breeze, 6.0 m/s, North-northwest
+                        </span>
+                    </div>
+
+                    <div class="wtr-val">
+                        <span class="wtr-val-name">
+                            Ветер
+                        </span>
+                        <span class="wtr-val-val">
+                            Moderate breeze, 6.0 m/s, North-northwest
+                        </span>
+                    </div>
+                </ul>
+            </div>
+
+            <div class="wtr-block">
+                <div class="wtr-header">
+                    <h3 class="wtr-city-name">
+                        Moscow
+                    </h3>
+                    <span class="wtr-temp">
+                        5°C
+                    </span>
+                    <img class="wtr-icon">
+                    <button class="wtr-del-button"></button>
+                </div>
+
+                <ul class="wtr-val-list">
+                    <div class="wtr-val">
+                        <span class="wtr-val-name">
+                            Ветер
+                        </span>
+                        <span class="wtr-val-val">
+                            Moderate breeze, 6.0 m/s, North-northwest
+                        </span>
+                    </div>
+
+                    <div class="wtr-val">
+                        <span class="wtr-val-name">
+                            Ветер
+                        </span>
+                        <span class="wtr-val-val">
+                            Moderate breeze, 6.0 m/s, North-northwest
+                        </span>
+                    </div>
+
+                    <div class="wtr-val">
+                        <span class="wtr-val-name">
+                            Ветер
+                        </span>
+                        <span class="wtr-val-val">
+                            Moderate breeze, 6.0 m/s, North-northwest
+                        </span>
+                    </div>
+
+                    <div class="wtr-val">
+                        <span class="wtr-val-name">
+                            Ветер
+                        </span>
+                        <span class="wtr-val-val">
+                            Moderate breeze, 6.0 m/s, North-northwest
+                        </span>
+                    </div>
+
+                    <div class="wtr-val">
+                        <span class="wtr-val-name">
+                            Ветер
+                        </span>
+                        <span class="wtr-val-val">
+                            Moderate breeze, 6.0 m/s, North-northwest
+                        </span>
+                    </div>
+                </ul>
+            </div>
+        </div>
     </main>
 
     <footer>
