Add fonts, change buttons

--- a/page.html
+++ b/page.html
@@ -94,8 +94,7 @@
 
             <div class="wtr-block-header wtr-block">
                 <div class="wtr-block-header-buttons">
-                    <button></button>
-                    <button class="wtr-del-button"></button>
+                    <button>Добавить город</button>
                 </div>
             </div>
 
@@ -108,67 +107,7 @@
                         5°C
                         </span>
                     <img class="wtr-icon">
-                    <button class="wtr-del-button"></button>
-                </div>
-
-                <ul class="wtr-val-list">
-                    <div class="wtr-val">
-                        <span class="wtr-val-name">
-                            Ветер
-                        </span>
-                        <span class="wtr-val-val">
-                            Moderate breeze, 6.0 m/s, North-northwest
-                        </span>
-                    </div>
-
-                    <div class="wtr-val">
-                        <span class="wtr-val-name">
-                            Ветер
-                        </span>
-                        <span class="wtr-val-val">
-                            Moderate breeze, 6.0 m/s, North-northwest
-                        </span>
-                    </div>
-
-                    <div class="wtr-val">
-                        <span class="wtr-val-name">
-                            Ветер
-                        </span>
-                        <span class="wtr-val-val">
-                            Moderate breeze, 6.0 m/s, North-northwest
-                        </span>
-                    </div>
-
-                    <div class="wtr-val">
-                        <span class="wtr-val-name">
-                            Ветер
-                        </span>
-                        <span class="wtr-val-val">
-                            Moderate breeze, 6.0 m/s, North-northwest
-                        </span>
-                    </div>
-
-                    <div class="wtr-val">
-                        <span class="wtr-val-name">
-                            Ветер
-                        </span>
-                        <span class="wtr-val-val">
-                            Moderate breeze, 6.0 m/s, North-northwest
-                        </span>
-                    </div>
-                </ul>
-            </div>
-
-            <div class="wtr-block">
-                <div class="wtr-header">
-                    <h3 class="wtr-city-name">
-                        Moscow
-                    </h3>
-                    <span class="wtr-temp">
-                        5°C
-                    </span>
-                    <img class="wtr-icon">
-                    <button class="wtr-del-button"></button>
+                    <button class="close">&times;</button>
                 </div>
 
                 <ul class="wtr-val-list">
@@ -226,9 +165,9 @@
                     </h3>
                     <span class="wtr-temp">
                         5°C
-                    </span>
+                        </span>
                     <img class="wtr-icon">
-                    <button class="wtr-del-button"></button>
+                    <button class="close">&times;</button>
                 </div>
 
                 <ul class="wtr-val-list">
@@ -286,9 +225,9 @@
                     </h3>
                     <span class="wtr-temp">
                         5°C
-                    </span>
+                        </span>
                     <img class="wtr-icon">
-                    <button class="wtr-del-button"></button>
+                    <button class="close">&times;</button>
                 </div>
 
                 <ul class="wtr-val-list">
@@ -346,9 +285,9 @@
                     </h3>
                     <span class="wtr-temp">
                         5°C
-                    </span>
+                        </span>
                     <img class="wtr-icon">
-                    <button class="wtr-del-button"></button>
+                    <button class="close">&times;</button>
                 </div>
 
                 <ul class="wtr-val-list">
@@ -406,9 +345,69 @@
                     </h3>
                     <span class="wtr-temp">
                         5°C
-                    </span>
+                        </span>
                     <img class="wtr-icon">
-                    <button class="wtr-del-button"></button>
+                    <button class="close">&times;</button>
+                </div>
+
+                <ul class="wtr-val-list">
+                    <div class="wtr-val">
+                        <span class="wtr-val-name">
+                            Ветер
+                        </span>
+                        <span class="wtr-val-val">
+                            Moderate breeze, 6.0 m/s, North-northwest
+                        </span>
+                    </div>
+
+                    <div class="wtr-val">
+                        <span class="wtr-val-name">
+                            Ветер
+                        </span>
+                        <span class="wtr-val-val">
+                            Moderate breeze, 6.0 m/s, North-northwest
+                        </span>
+                    </div>
+
+                    <div class="wtr-val">
+                        <span class="wtr-val-name">
+                            Ветер
+                        </span>
+                        <span class="wtr-val-val">
+                            Moderate breeze, 6.0 m/s, North-northwest
+                        </span>
+                    </div>
+
+                    <div class="wtr-val">
+                        <span class="wtr-val-name">
+                            Ветер
+                        </span>
+                        <span class="wtr-val-val">
+                            Moderate breeze, 6.0 m/s, North-northwest
+                        </span>
+                    </div>
+
+                    <div class="wtr-val">
+                        <span class="wtr-val-name">
+                            Ветер
+                        </span>
+                        <span class="wtr-val-val">
+                            Moderate breeze, 6.0 m/s, North-northwest
+                        </span>
+                    </div>
+                </ul>
+            </div>
+
+            <div class="wtr-block">
+                <div class="wtr-header">
+                    <h3 class="wtr-city-name">
+                        Moscow
+                    </h3>
+                    <span class="wtr-temp">
+                        5°C
+                        </span>
+                    <img class="wtr-icon">
+                    <button class="close">&times;</button>
                 </div>
 
                 <ul class="wtr-val-list">
