Customize buttons, main city

--- a/page.html
+++ b/page.html
@@ -14,21 +14,23 @@
             </h1>
         </div>
         <div class="wtr-block">
-            <button>Обновить геолокацию</button>
+            <button class="func-btn">Обновить геолокацию</button>
         </div>
     </div>
 </header>
 
 <main>
     <div class="wtr-list">
-        <div class="wtr-block" >
+        <div id="wtr-main" class="wtr-block">
             <h2 class="wtr-city-name">
                 Saint-Petersburg
             </h2>
-            <img>
-            <span id="wtr-temp">
-                8°C
-            </span>
+            <div class="main-block">
+                <img src="#" alt="Иконка погоды">
+                <span class="wtr-temp">
+                    8°C
+                </span>
+            </div>
         </div>
         <div class="wtr-block">
             <ul class="feat-list">
@@ -89,7 +91,7 @@
             </div>
 
             <div class="wtr-block">
-                    <button>Добавить город</button>
+                    <button class="func-btn">Добавить город</button>
             </div>
 
             <div class="wtr-block">
@@ -100,7 +102,7 @@
                     <span class="wtr-temp">
                         5°C
                         </span>
-                    <img class="wtr-icon">
+                    <img class="wtr-icon" alt="Иконка погоды">
                     <button class="wtr-cls-btn">&times;</button>
                 </div>
 
@@ -160,7 +162,7 @@
                     <span class="wtr-temp">
                         5°C
                         </span>
-                    <img class="wtr-icon">
+                    <img class="wtr-icon" alt="Иконка погоды">
                     <button class="wtr-cls-btn">&times;</button>
                 </div>
 
@@ -220,7 +222,7 @@
                     <span class="wtr-temp">
                         5°C
                         </span>
-                    <img class="wtr-icon">
+                    <img class="wtr-icon" alt="Иконка погоды">
                     <button class="wtr-cls-btn">&times;</button>
                 </div>
 
@@ -280,7 +282,7 @@
                     <span class="wtr-temp">
                         5°C
                         </span>
-                    <img class="wtr-icon">
+                    <img class="wtr-icon" alt="Иконка погоды">
                     <button class="wtr-cls-btn">&times;</button>
                 </div>
 
@@ -340,7 +342,7 @@
                     <span class="wtr-temp">
                         5°C
                         </span>
-                    <img class="wtr-icon">
+                    <img class="wtr-icon" alt="Иконка погоды">
                     <button class="wtr-cls-btn">&times;</button>
                 </div>
 
@@ -400,7 +402,7 @@
                     <span class="wtr-temp">
                         5°C
                         </span>
-                    <img class="wtr-icon">
+                    <img class="wtr-icon" alt="Иконка погоды">
                     <button class="wtr-cls-btn">&times;</button>
                 </div>
 
